# ztrack

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  config.ini  environment.yml  pyproject.toml  setup.cfg  setup.py
ztrack/: .gitignore  __init__.py  __main__.py  _annotate.py  _create_config.py  _run_gui.py  _run_tracking.py  _settings.py  _view_results.py  cli.py  metadata.py  pyproject.toml  setup.cfg  setup.py
ztrack/gui/: _control_widget.py  _main_window.py  _tracking_display_widget.py  _tracking_image_view.py  _tracking_plot_widget.py  _variable_widgets.py  annotator.py  create_config.py  menu_widget.py  tracking_image_view.py  tracking_viewer.py
ztrack/gui/behavior_analyzer/: behavior_analyzer.py  control_widget.py  multirow.py  plot_widget.py
ztrack/gui/utils/: file.py  frame_bar.py  launch.py  variable_widget.py  variable_widgets.py
ztrack/tracking/: __init__.py  params.py  tracker.py  variable.py
ztrack/tracking/eye/: __init__.py  adaptive_threshold.py  binary.py  eye_tracker.py  eyes_only.py  free_swim.py  multi_threshold.py
ztrack/tracking/free/: __init__.py  base.py  contour.py  free_swim_1.py  sequential.py
ztrack/tracking/mixins/: background.py
ztrack/tracking/paramecia/: ParameciaTracker.py  __init__.py  paramecia.py
ztrack/tracking/tail/: __init__.py  binary.py  com.py  default.py  embedded.py  gradient.py  gradient2.py  sequential.py  sequential2.py  sequential_sato.py  tail_tracker.py
ztrack/utils/: config.py  cv.py  exception.py  file.py  geometry.py  math.py  roi.py  shape.py  typing.py  variable.py  video.py
