[tool.black]
target-version = ['py38']
line-length = 99
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "ztrack"
version = "1.0.0"
description = ""
authors = ["Ka Chung Lam <kclamar@connect.ust.hk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kclamar/ztrack"
repository = "https://github.com/kclamar/ztrack"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research"
]

bump2version = { version = "*", optional = true }
pandas-stubs = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }
PyQt5-stubs = { version = "*", optional = true }

[tool.poetry.extras]
dev = [
    "bump2version",
    "pandas-stubs",
    "pre-commit",
    "PyQt5-stubs",
]

[tool.poetry.scripts]
ztrack = "ztrack.cli:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=57.0.0",
]

build-backend = "poetry.core.masonry.api"
